force-app/main/default/objects/Account_Snapshot__c/Account_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Used to capture account fields and record them for timeline reporting</description>
    <label>Account Snapshot</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Account Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>