force-app/main/default/objects/Account_Snapshot__c/fields/Client_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Client_Sentiment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Client Sentiment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>