force-app/main/default/objects/Account_Snapshot__c/fields/CSAT_Average__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Average__c</fullName>
    <label>CSAT Average</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>