force-app/main/default/objects/Account_Snapshot__c/fields/Has_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Has_CSAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has CSAT</label>
    <type>Checkbox</type>
</CustomField>