force-app/main/default/objects/Account_Snapshot__c/fields/Has_NPS__c.field-meta.xml
<CustomField>
    <fullName>Has_NPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has NPS</label>
    <type>Checkbox</type>
</CustomField>