force-app/main/default/objects/Account_Snapshot__c/fields/Has_Review__c.field-meta.xml
<CustomField>
    <fullName>Has_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Review</label>
    <type>Checkbox</type>
</CustomField>