force-app/main/default/objects/Account_Snapshot__c/fields/NPS_Average__c.field-meta.xml
<CustomField>
    <fullName>NPS_Average__c</fullName>
    <label>NPS Average</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>