force-app/main/default/objects/Account_Snapshot__c/fields/Review_Average__c.field-meta.xml
<CustomField>
    <fullName>Review_Average__c</fullName>
    <label>Review Average</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>